@@ -36,6 +36,8 @@ module Rufus
     #
     module TyrantLib #:nodoc#
 
+      extend FFI::Library
+
       #
       # find Tokyo Tyrant lib
 
@@ -45,88 +47,81 @@ module Rufus
         /usr/local/lib/libtokyotyrant.so
       })
 
-      if path = paths.find { |path| File.exist?(path) }
+      path = paths.find { |path| File.exist?(path) }
 
-        extend FFI::Library
+      raise "Did not find Tokyo Tyrant libraries on your system" unless path
 
-        ffi_lib(path)
+      ffi_lib(path)
 
-        class << self
-          alias :attfunc :attach_function
-        end
-
-        #
-        # tcrdb functions
-
-        attfunc :tcrdbnew, [], :pointer
-
-        attfunc :tcrdbopen, [ :pointer, :string, :int ], :int
-        attfunc :abs_close, :tcrdbclose, [ :pointer ], :int
-
-        attfunc :abs_del, :tcrdbdel, [ :pointer ], :void
-
-        attfunc :abs_rnum, :tcrdbrnum, [ :pointer ], :uint64
-        attfunc :abs_size, :tcrdbsize, [ :pointer ], :uint64
-
-        attfunc :abs_put2, :tcrdbput2, [ :pointer, :string, :string ], :int
-        attfunc :abs_get2, :tcrdbget2, [ :pointer, :string ], :string
-        attfunc :abs_out2, :tcrdbout2, [ :pointer, :string ], :int
-
-        attfunc :abs_iterinit, :tcrdbiterinit, [ :pointer ], :int
-        attfunc :abs_iternext2, :tcrdbiternext2, [ :pointer ], :string
-
-        attfunc :abs_vanish, :tcrdbvanish, [ :pointer ], :int
-
-        attfunc :abs_sync, :tcrdbsync, [ :pointer ], :int
-        attfunc :abs_copy, :tcrdbcopy, [ :pointer, :string ], :int
-
-        #
-        # table functions
-
-        attfunc :tab_close, :tcrdbclose, [ :pointer ], :int
-
-        attfunc :tab_genuid, :tcrdbtblgenuid, [ :pointer ], :int64
-
-        attfunc :tab_get, :tcrdbtblget, [ :pointer, :string, :int ], :pointer
-
-        attfunc :tab_iterinit, :tcrdbiterinit, [ :pointer ], :int
-        attfunc :tab_iternext2, :tcrdbiternext2, [ :pointer ], :string
-
-        attfunc :tab_put, :tcrdbtblput, [ :pointer, :string, :int, :pointer ], :int
-
-        attfunc :tab_out, :tcrdbtblout, [ :pointer, :string, :int ], :int
-
-        attfunc :tab_ecode, :tcrdbecode, [ :pointer ], :int
-        attfunc :tab_errmsg, :tcrdberrmsg, [ :int ], :string
-
-        attfunc :tab_del, :tcrdbdel, [ :pointer ], :void
-
-        attfunc :tab_rnum, :tcrdbrnum, [ :pointer ], :uint64
-
-        attfunc :tab_vanish, :tcrdbvanish, [ :pointer ], :int
-
-        attfunc :tab_setindex, :tcrdbtblsetindex, [ :pointer, :string, :int ], :int
-
-        #
-        # qry functions
-
-        attfunc :qry_new, :tcrdbqrynew, [ :pointer ], :pointer
-        attfunc :qry_del, :tcrdbqrydel, [ :pointer ], :void
-
-        attfunc :qry_addcond, :tcrdbqryaddcond, [ :pointer, :string, :int, :string ], :void
-        attfunc :qry_setorder, :tcrdbqrysetorder, [ :pointer, :string, :int ], :void
-        attfunc :qry_setmax, :tcrdbqrysetmax, [ :pointer, :int ], :void
-
-        attfunc :qry_search, :tcrdbqrysearch, [ :pointer ], :pointer
-
-      else
-
-        def method_missing (m, *args)
-          raise "no libtokyotyrant.dylib found on your system"
-        end
+      class << self
+        alias :attfunc :attach_function
       end
 
-    end
+      #
+      # tcrdb functions
 
+      attfunc :tcrdbnew, [], :pointer
+
+      attfunc :tcrdbstat, [ :pointer ], :string
+
+      attfunc :tcrdbopen, [ :pointer, :string, :int ], :int
+      attfunc :abs_close, :tcrdbclose, [ :pointer ], :int
+
+      attfunc :abs_del, :tcrdbdel, [ :pointer ], :void
+
+      attfunc :abs_rnum, :tcrdbrnum, [ :pointer ], :uint64
+      attfunc :abs_size, :tcrdbsize, [ :pointer ], :uint64
+
+      attfunc :abs_put2, :tcrdbput2, [ :pointer, :string, :string ], :int
+      attfunc :abs_get2, :tcrdbget2, [ :pointer, :string ], :string
+      attfunc :abs_out2, :tcrdbout2, [ :pointer, :string ], :int
+
+      attfunc :abs_iterinit, :tcrdbiterinit, [ :pointer ], :int
+      attfunc :abs_iternext2, :tcrdbiternext2, [ :pointer ], :string
+
+      attfunc :abs_vanish, :tcrdbvanish, [ :pointer ], :int
+
+      attfunc :abs_sync, :tcrdbsync, [ :pointer ], :int
+      attfunc :abs_copy, :tcrdbcopy, [ :pointer, :string ], :int
+
+      #
+      # table functions
+
+      attfunc :tab_close, :tcrdbclose, [ :pointer ], :int
+
+      attfunc :tab_genuid, :tcrdbtblgenuid, [ :pointer ], :int64
+
+      attfunc :tab_get, :tcrdbtblget, [ :pointer, :string, :int ], :pointer
+
+      attfunc :tab_iterinit, :tcrdbiterinit, [ :pointer ], :int
+      attfunc :tab_iternext2, :tcrdbiternext2, [ :pointer ], :string
+
+      attfunc :tab_put, :tcrdbtblput, [ :pointer, :string, :int, :pointer ], :int
+
+      attfunc :tab_out, :tcrdbtblout, [ :pointer, :string, :int ], :int
+
+      attfunc :tab_ecode, :tcrdbecode, [ :pointer ], :int
+      attfunc :tab_errmsg, :tcrdberrmsg, [ :int ], :string
+
+      attfunc :tab_del, :tcrdbdel, [ :pointer ], :void
+
+      attfunc :tab_rnum, :tcrdbrnum, [ :pointer ], :uint64
+
+      attfunc :tab_vanish, :tcrdbvanish, [ :pointer ], :int
+
+      attfunc :tab_setindex, :tcrdbtblsetindex, [ :pointer, :string, :int ], :int
+
+      #
+      # qry functions
+
+      attfunc :qry_new, :tcrdbqrynew, [ :pointer ], :pointer
+      attfunc :qry_del, :tcrdbqrydel, [ :pointer ], :void
+
+      attfunc :qry_addcond, :tcrdbqryaddcond, [ :pointer, :string, :int, :string ], :void
+      attfunc :qry_setorder, :tcrdbqrysetorder, [ :pointer, :string, :int ], :void
+      attfunc :qry_setmax, :tcrdbqrysetmax, [ :pointer, :int ], :void
+
+      attfunc :qry_search, :tcrdbqrysearch, [ :pointer ], :pointer
+    end
   end
 end
